--- a/README
+++ b/README
@@ -2,3 +2,5 @@ Hey thanks for reading this!
 Super fun git GUI testing
 - EDIT CHANGES
  -Well here we go again
+
+change somethign a the bottom of the file
